# wazzup

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml  example.env  run.sh
.cargo/: config.toml
dump/: client_database.sql  data_client_database.sql  data_main_database.sql  main_database.sql  migration_add_hook_field.sql
entt/client/: availability_exceptions.rs  client_tags.rs  clients.rs  locations.rs  prelude.rs  resources.rs  schedule_templates.rs  task_statuses.rs  tokens.rs  users.rs  wazzup_channels.rs  wazzup_settings.rs  wazzup_transfers.rs
entt/main/: companies.rs  mod.rs  prelude.rs
src/: app_state.rs  config.rs  errors.rs  lib.rs  main.rs
src/admin_cli/: main.rs
src/api/: admin.rs  channels.rs  chats.rs  clients.rs  companies.rs  contacts.rs  context.rs  helpers.rs  messages.rs  middleware.rs  mod.rs  timezone.rs  users.rs  validation.rs  webhooks.rs
src/api/channels/: functions.rs  handlers.rs  mod.rs  structures.rs
src/api/chats/: functions.rs  handlers.rs  mod.rs  structures.rs
src/api/webhooks/: functions.rs  handlers.rs  mod.rs  structures.rs
src/database/: connector.rs  mod.rs  pool_manager.rs  types.rs
src/database/client/: booking_resources.rs  client_tag_assignments.rs  models.rs  services.rs  tasks.rs  users.rs
src/database/main/: companies.rs  mod.rs  models.rs
src/database/models/: availability_exceptions.rs  booking_resources.rs  bookings.rs  channel_settings.rs  channels.rs  chat_transfers.rs  chats.rs  client_tag_assignments.rs  client_tags.rs  clients.rs  companies.rs  company_users.rs  contact_types.rs  contacts.rs  deals.rs  messages.rs  mod.rs  projects.rs  resource_roles.rs  resources.rs  schedule_templates.rs  service_required_roles.rs  services.rs  task_assignments.rs  task_statuses.rs  tasks.rs  tokens.rs  users.rs
src/entt/: bookings.rs  mod.rs  projects.rs  resource_roles.rs  service_required_roles.rs  task_assignments.rs  wazzup_chats.rs  wazzup_messages.rs
src/services/: bot_service.rs  mod.rs  wazzup_api.rs  webhook_handler.rs
static/: channel-setup.html
